# python-json-patch

./: .coveragerc  .gitignore  .travis.yml  AUTHORS  MANIFEST.in  README  README.md  ext_tests.py  jsonpatch.py  makefile  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test.py  tests.py  tox.ini
.github/: workflows
.github/workflows/: test.yaml
doc/: Makefile  commandline.rst  conf.py  index.rst  mod-jsonpatch.rst  tutorial.rst
jsonpatch/: __init__.py
jsonpatch/cli/: jsondiff.py  jsonpatch.py
