[metadata]
name = jsonpatch
description = Apply JSON-Patches (RFC 6902)
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries
    Topic :: Utilities
project_urls =
    Website = https://github.com/stefankoegl/python-json-patch
    Repository = https://github.com/stefankoegl/python-json-patch.git
    Documentation = https://python-json-patch.readthedocs.org/
    PyPI = https://pypi.org/pypi/jsonpatch
    Tests = https://travis-ci.org/stefankoegl/python-json-patch
    Test Coverage = https://coveralls.io/r/stefankoegl/python-json-patch

[options]
packages = jsonpatch, jsonpatch.cli
install_requires = jsonpointer>=1.9
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*

[options.entry_points]
console_scripts =
    jsondiff = jsonpatch.cli.jsondiff:main
    jsonpatch = jsonpatch.cli.jsonpatch:main

[bdist_wheel]
universal = 1
